Fixed table alignment

--- a/_sass/tables.scss
+++ b/_sass/tables.scss
@@ -60,6 +60,12 @@ table .thumbnail
 
 #TopDecksTable
 {
+    th
+    {
+        padding-left: 4px !important;
+        padding-right: 4px !important;
+    }
+
     td
     {
         padding: 0px !important;
